--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "matplotlib>=3.10.5",
+    "numpy>=2.3.2",
+    "pandas>=2.3.2",
+    "scikit-learn>=1.7.2",
+    "scipy>=1.16.2",
+    "torch>=2.8.0",
     "tornado>=6.5.2",
 ]
